--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "extract-zip": "^2.0.1",
+    "keytar": "^7.9.0",
     "rcon-client": "^4.2.5",
     "multer": "^1.4.5-lts.1",
     "tar": "^7.4.3"
